@@ -1,3 +1,6 @@
+owncloud-news (1.805)
+* Hide editing tools in invalid feed dialog
+
 owncloud-news (1.804)
 * Make it possible to rename folders
 * Do not show rename action for feeds that could not be added
